--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,21 @@
   bottom: 0;
 }
 
-.home {
-  width: 100vw;
-  height: 100vh;
+.footer-bg-light {
+  background-color: #f8f9fa;
+  /* Light background */
 }
 
+.footer-bg-dark {
+  background-color: #343a40;
+  /* Dark background */
+}
+
+.main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
 .home-header {
   padding-top: 80px !important;
@@ -42,6 +52,20 @@
   padding-left: 15px;
 }
 
-.mb-4 {
-  margin-bottom: 2.5rem;
+
+.education-item {
+  margin-bottom: 50px;
+}
+
+.education-item h3 {
+  margin-bottom: 1px;
+}
+
+.education-item p {
+  margin-bottom: 1px;
+}
+
+.work-section,
+.education-section {
+  margin-bottom: 30vh;
 }
