--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
   padding-left: 15px;
 }
 
-
+.certificate-item,
 .work-item,
 .education-item {
   margin-bottom: 50px;
@@ -91,6 +91,7 @@
   margin-bottom: 1px;
 }
 
+.certificate-section,
 .work-section,
 .education-section {
   margin-bottom: 30vh;
